# systemd-ask-password-gui

./: CMakeLists.txt  README.md
qml/: Keyboard.qml  MainPage.qml  NotificationBox.qml  PasswordPage.qml  systemd-ask-password-gui.qml
rpm/: systemd-ask-password-gui.spec
src/: main.cpp  passwordtask.cpp  passwordtask.h  passwordtasklist.cpp  passwordtasklist.h  taskwatcher.cpp  taskwatcher.h
